--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,154 @@
+<!-- app/Resources/views/base.html.twig -->
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <meta http-equiv="Content-Type" content="text/html"; charset=utf-8" />
+        <title>{% block title %}der kaiser netz{% endblock %} - kaisernet</title>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        {% block stylesheets %}
+            <link href='http://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet' type='text/css'>
+            <link href='http://fonts.googleapis.com/css?family=La+Belle+Aurore' rel='stylesheet' type='text/css'>
+            <!-- Bootstrap Core CSS -->
+            <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet" />
+            <!-- MetisMenu CSS -->
+		    <link href="{{ asset('css/metisMenu.min.css') }}" rel="stylesheet">
+            <!-- Timeline CSS -->
+		    <link href="{{ asset('css/timeline.css') }}" rel="stylesheet">
+		    <!-- Custom CSS -->
+		    <link href="{{ asset('css/admin.css') }}" rel="stylesheet">
+		    <!-- Morris Charts CSS -->
+		    <link href="{{ asset('css/morris.css') }}" rel="stylesheet">
+		    <!-- Font Awesome Fonts -->
+		    <link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet">
+		    <!-- Bootstrap Datepicker CSS -->
+		    <link href="{{ asset('css/bootstrap-datepicker.min.css') }}" type="text/css" rel="stylesheet">
+        {% endblock %}
+        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    	<div id='wrapper'>
+    		<!-- Navigation -->
+    		<nav clas="navbar navbar-default navbar-static-top" role="navigation" style="margine-bottom: 0">
+	    		<div class="navbar-header">
+		    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	                    <span class="sr-only">Toggle navigation</span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                    <span class="icon-bar"></span>
+	                </button>
+	    			<a class="navbar-brand" href="index.html">Logo</a>
+	    		</div>
+	    		<!-- /.navbar-header -->
+	    		<ul class="nav navbar-top-links navbar-right">
+	    			<li class="dropdown">
+	    				<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+	    					<i class="fa fa-server fa-fw"></i>
+	    					<i class="fa fa-caret-down"></i>
+	    				</a>
+						<ul class="dropdown-menu dropdown-app">
+                        	<li><a href="{{ path('CoreAccountingBundle_accounting_home') }}"><i class="fa fa-calculator fa-fw"></i> Accounting</a></li>
+                        	<li><a href="{{ path('CoreAccountingBundle_investments_home') }}"><i class="fa fa-money fa-fw"></i> Investments</a></li>
+                        	<li><a href="{{ path('CoreAccountingBundle_assets_home') }}"><i class="fa fa-building fa-fw"></i> Assets</a></li>
+	    				</ul>
+	    				<!-- /.dropdown-applications -->
+	    			</li>
+	    			<!-- /.dropdown -->
+	    			<li class="dropdown">
+	    				<a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+	    					<i class="fa fa-user fa-fw"></i>
+	    					<i class="fa fa-caret-down"></i>
+	    				</a>
+						<ul class="dropdown-menu dropdown-user">
+                        	<li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a></li>
+                        	<li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a></li>
+                        	<li class="divider"></li>
+                        	<li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+	    				</ul>
+	    				<!-- /.dropdown-user -->
+	    			</li>
+	    			<!-- /.dropdown -->
+	    		</ul>
+	    		<!-- /.navbar-top-links -->
+	    		<div class="navbar-default sidebar" role="navigation">
+	    			<div class="sidebar-nav navbar-collapse">
+	    				<ul class="nav" id="side-menu">
+	    					<li class="sidebar-search">
+	                            <div class="input-group custom-search-form">
+	                                <input type="text" class="form-control" placeholder="Search...">
+	                                <span class="input-group-btn">
+		                                <button class="btn btn-default" type="button">
+		                                    <i class="fa fa-search"></i>
+		                                </button>
+		                            </span>
+	                            </div>
+	                            <!-- /input-group -->
+	                        </li>
+	                        <!-- /search -->
+	                        
+				    		{% block navigation %}
+    		
+	                        <li>
+	                            <a href="{{ path('CoreAccountingBundle_home') }}"><i class="fa fa-home fa-fw"></i> Home</a>
+	                        </li>
+	                        
+	                        {% endblock %}
+	                        
+                    	</ul>
+	    			</div>
+	    			<!-- /.sidebar-collapse -->
+	    		</div>
+	    		<!-- /.navbar-static-side -->
+    		</nav>
+	    	<div id="page-wrapper">
+		    	<div class="row">
+	                <div class="col-lg-12">
+	                    <h1 class="page-header">
+	                    {% block headtitle %}
+	                    Home
+	                    {% endblock %}
+	                    </h1>
+	                </div>
+	                <!-- /.col-lg-12 -->
+	            </div>
+	            <!-- /.row -->
+	            {% block body %}
+	            
+	            <div class="row">
+	                <div class="jumbotron">
+	                    <h1>Welcome to the Core Home System!</h1>
+	                    <p>The Core Home System is your portal for managing key aspects of the Home environment</p>
+	                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Login</a></p>
+	                </div>
+	                <!-- /.jumbotron -->
+	            </div>
+	            
+	            {% endblock %}
+	    	</div>
+	    	<!-- /#page-wrapper -->	    	
+    	</div>
+    	<!-- /#wrapper -->
+
+        {% block javascripts %}
+        <!-- jQuery -->
+	    <script src="{{ asset('js/jquery-1.11.2.min.js') }}"></script>
+	    <!-- Bootstrap Core JavaScript -->
+	    <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+	    <!-- Metis Menu Plugin JavaScript -->
+    	<script src="{{ asset('js/metisMenu.min.js') }}"></script>
+    	<!-- Morris Charts JavaScript -->
+	    <script src="{{ asset('js/raphael-min.js') }}"></script>
+    	<script src="{{ asset('js/morris.min.js') }}"></script>
+    	<!-- Bootstrap Datetime JavaScript -->
+	    <script src="{{ asset('js/bootstrap-datepicker.min.js') }}"></script>
+    	<!-- Custom JavaScript -->
+	    <script src="{{ asset('js/admin.js') }}"></script>
+        
+        {% endblock %}
     </body>
 </html>
